# citations-api/src/main/java/org/gso/citations_api/model/CitationStatus.java
@@ -1,0 +1,5 @@
+package org.gso.citations_api.model;
+
+public enum CitationStatus {
+    PENDING, VALIDATED;
+}
