# profiles-api/src/main/java/org/gso/profiles/dto/ProfileDto.java
@@ -1,10 +1,10 @@
 package org.gso.profiles.dto;
 
-import java.time.LocalDateTime;
-
+import java.time.LocalDate;
 import com.fasterxml.jackson.annotation.JsonFormat;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
+import com.fasterxml.jackson.datatype.jsr310.ser.LocalDateSerializer;
 import com.fasterxml.jackson.datatype.jsr310.ser.LocalDateTimeSerializer;
 import jakarta.validation.constraints.Email;
 import jakarta.validation.constraints.Min;
@@ -23,7 +23,6 @@ import org.gso.profiles.model.ProfileModel;
 public class ProfileDto {
 
     private String id;
-    @NotEmpty
     private String userId;
     @Email
     private String mail;
@@ -31,12 +30,12 @@ public class ProfileDto {
     private int age;
     private String firstName;
     private String lastName;
-    @JsonSerialize(using = LocalDateTimeSerializer.class)
-    @JsonFormat(pattern = "YYYY-MM-DD HH:mm:ss")
-    private LocalDateTime created;
-    @JsonSerialize(using = LocalDateTimeSerializer.class)
-    @JsonFormat(pattern = "YYYY-MM-DD HH:mm:ss")
-    private LocalDateTime modified;
+    @JsonSerialize(using = LocalDateSerializer.class)
+    @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "yyyy-MM-dd")
+    private LocalDate created;
+    @JsonSerialize(using = LocalDateSerializer.class)
+    @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "yyyy-MM-dd")
+    private LocalDate modified;
 
     public ProfileModel toModel() {
         return ProfileModel.builder()
@@ -45,6 +44,8 @@ public class ProfileDto {
                 .age(this.age)
                 .firstName(this.firstName)
                 .lastName(this.lastName)
+                .created(this.created)
+                .modified(this.modified)
                 .build();
     }
 }
